<resources>
    <string name="app_name">IProid_Test</string>
    <string name="Introduction">Introduction To Python Programming </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Variable Content -->
    <string name="Intro_VC1">What is Variable? </string>
    <string name="Intro_VC2">A variable is being created when you assign a value to it.</string>
    <string name="Intro_VC3">NOTE: Variable names are case sensitive.<br/>Variables can store numeric and string data</string>
    <string name="Intro_VC4">Example: quiz = “variables” </string>
    <string name="Intro_VC5">print (quiz)</string>
    <string name="Intro_VC6">OUTPUT: variables</string>
    <string name="Intro_VC7">In here we can see that the variable that we created is quiz and store the value of String data “variables”</string>
    <!--Variable Exercise 1 -->
    <string name="Intro_VCE1">Exercise: <br/> What variable name is the correct to print the score 10 </string>
    <string name="Intro_VCE2"> ______ = 10 </string>
    <string name="Intro_VCE3">print (Score) </string>
    <string name="Intro_VCE4">OUTPUT: 10</string>

    <!--ArithmeticOP Content -->
    <string name="Intro_AOPC1">What is Arithmetic Operator?</string>
    <string name="Intro_AOPC2">Arithmetic operators are used to perform mathematical operations<br/> like addition, subtraction, multiplication and division.</string>
    <string name="Intro_AOPC3">Example of Arithmetic Operator are:</string>
    <string name="Intro_AOPC4"> +	Addition: adds two operands<br/>
                                –	Subtraction: subtracts two operands<br/>
                                *	Multiplication: multiplies two operands<br/>
                                /	Division (float): divides the first operand by the second<br/>
                                %	Modulus: returns the remainder when first operand is divided by the second<br/>
                                **	Power : Returns first raised to power second</string>
    <!--Expression Content -->
    <string name="Intro_EC1">What is Expression? </string>
    <string name="Intro_EC2">It is a combination of values, variables, and operators. </string>
</resources>