<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lecture.Intro.Variables.Firstview">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="10dp">
                  <TextView
                      android:id="@+id/viewOneText"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/Intro_VC1" />
              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="15dp">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/Intro_VC2" />
              </LinearLayout>

              <!-- Compiler View -->

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingLeft="20dp"
                  android:background="@color/p1">
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:padding="10dp">
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/Intro_VC4" />
                  </LinearLayout>
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:padding="10dp">
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:maxLines="2"
                          android:text="@string/Intro_VC5" />
                  </LinearLayout>
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:padding="10dp">
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:maxLines="2"
                          android:text="@string/Intro_VC6" />
                  </LinearLayout>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="1dp">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:maxLines="2"
                      android:text="@string/Intro_VC7" />
              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="20dp">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/Intro_VC3" />
              </LinearLayout>
              <LinearLayout
                  android:padding="10dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
                  <Button
                      android:id="@+id/IntroVariable_viewOneBtn"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/viewOneText"
                      android:layout_gravity="bottom"
                      android:text="next" />
              </LinearLayout>
          </LinearLayout>
      </RelativeLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>