<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/IntroVariable_CoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lecture.Intro.Variables.Secondview">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp">
                        <TextView
                            android:id="@+id/viewOneText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Intro_VCE1" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="20dp">
                        <TextView
                            android:id="@+id/txt_Intro_Variable_answer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Intro_VCE2" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Intro_VCE3" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <TextView
                            android:id="@+id/Intro_Variable_FinalAnswer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Intro_VCE4" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="20dp">
                        <Button
                            android:id="@+id/Intro_CEOpt1"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Score"/>
                        <Button
                            android:id="@+id/Intro_CEOpt2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="scores"/>
                        <Button
                            android:id="@+id/Intro_CEOpt3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="score"/>
                    </LinearLayout>

                    <LinearLayout
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/IntroVariable_viewTwoBtn"
                            android:layout_width="match_parent"
                            android:text="next"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>